# PediatricPercentileSkill

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SKILL.md  TRUST_AND_LIMITATIONS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/: _common.py  fhir_r4.py  flat.py  synthea.py
assets/: README.md
demo/: warren_synthea.md
evals/: run_eval.py  scorer.py
evals/responses/: s1_fhir_happy_path.txt  s2_synthea_csv_boundary.txt  s3_missing_birth_date.txt  s4_implausible_value.txt  s5_out_of_scope_velocity.txt  s5_out_of_scope_velocity_v1_before_fix.txt
evals/scenarios/: s1_fhir_happy_path.json  s2_synthea_csv_boundary.json  s3_missing_birth_date.json  s4_implausible_value.json  s5_out_of_scope_velocity.json
references/: CANONICAL_SCHEMA.md  DATA_SOURCES.md  LOINC_MAP.md  METHODOLOGY.md
references/data/: cdc_bmi_extended.csv  cdc_lenageinf.csv  convert_who.py  who_bmi_for_age.csv  who_head_circumference_for_age.csv  who_length_for_age.csv  who_weight_for_age.csv  who_weight_for_length.csv
scripts/: chart.py  growth.py
tests/: test_adapters.py  test_chart.py  test_engine.py  test_scorer.py
tests/fixtures/: README.md  flat_column_map.json  flat_measurements.csv  flat_measurements.json  flat_measurements_custom_columns.csv  synthea_fhir_bundle.json  synthea_observations.csv  synthea_patients.csv
(+6 files in other folders)
