[project]
name = "growth-percentile-skill"
version = "0.1.0"
description = "Agent Skill for computing pediatric growth percentiles and z-scores against CDC and WHO growth standards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
data = [
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "adapters"]
